@@ -1,0 +1,9 @@
+{% extends "message.md" %}
+
+{% block title -%}
+Reset complete
+{% endblock %}
+
+{% block message %}
+I have successfully deleted the integration branches.
+{% endblock %}
