@@ -5,6 +5,7 @@ All notable changes to this project will be documented in this file.
 # Added
 - Implement GitHub API
 - Git Host API allows to filter on pull request status
+- reset and force_reset commands
 
 ## [3.0.4] - 2017-02-16
 # Fixed
